syntax = "proto3";
option go_package = "/pb";
import "google/protobuf/empty.proto";

service MasterService {
    rpc HeartBeat(HeartBeatRequest) returns (google.protobuf.Empty) {}
}

service ChunkServerService{
    rpc StoreChunk(ChunkRequest) returns (google.protobuf.Empty){}
    rpc CopyChunk(CopyChunkRequest) returns (CopyChunkResponse){}
}

message CopyChunkRequest{
    string rpcaddr = 1;
    string chunkId = 2;
    bool shouldDelete = 3;
}
message CopyChunkResponse{
    bool successful = 1;
}
message HeartBeatRequest {
    string rpcaddr = 1;
    string restaddr = 2;
    repeated string chunkIds = 3; 
    float memoryUtilization = 4; 
}
message ChunkRequest{
    bytes chunk = 1;
    string fileName = 2; 
}